--- a/ShopApp/Pages/Shared/_AdminLayout.cshtml
+++ b/ShopApp/Pages/Shared/_AdminLayout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/Index">Admin</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/GetPage">Get data</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Admin/CreatePage">Create data</a>
                         </li>
                     </ul>
                 </div>
