--- a/ShopApp/Pages/Admin/Index.cshtml
+++ b/ShopApp/Pages/Admin/Index.cshtml
@@ -3,7 +3,19 @@
 @{
 }
 <div id="app">
+    <div>
+        <input v-model="productModel.name"/>
+        <input v-model="productModel.description"/>
+        <input v-model="productModel.price"/>
+    </div>
+    <button v-on:click ="creatProduct">Create</button>
     <button v-on:click ="getProducts">Get Products</button>
+    <div>
+        <p v-for = "product in products">
+            {{product.id}} - {{product.name}} - {{product.description}} - {{product.price}}
+        </p>
+    </div>
+
 </div>
 
 @section scripts{
