--- a/ShopApp/Pages/Admin/Index.cshtml
+++ b/ShopApp/Pages/Admin/Index.cshtml
@@ -2,26 +2,72 @@
 @model ShopApp.Pages.Admin.IndexModel
 @{
 }
-<div id="app">
-    <div>
-        <input v-model="productModel.name"/>
-        <input v-model="productModel.description"/>
-        <input v-model="productModel.price"/>
-    </div>
-        <button @@click ="creatProduct" v-if ="!productModel.id">Create</button>
-        <button @@click ="updateProduct" v-else>Update</button>
-        <button v-on:click ="getProducts">Get Products</button>
-    <div>
-        <p v-for = "(product, index) in products">
-            {{product.id}} - {{product.name}} - {{product.description}} - {{product.price}}
-            <a @@click ="editProduct(product, index)">Edit</a>
-            <a @@click ="deleteProduct(product.id, index)">Delete</a>
-        </p>
+<div id="app" class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-header">
+                    <h4 class="card-title">Admin Menu</h4>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><a href="#">Products</a></li>
+                    <li class="list-group-item"><a href="#">Stock</a></li>
+                    <li class="list-group-item"><a href="#">Orders</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="col-md-9">
+            <div v-if="!editing">
+                <button class="btn btn-primary" @@click="newProduct">Add New Product</button>
+                <table class="table mt-4">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="(product, index) in products">
+                            <td>{{ product.id }}</td>
+                            <td>{{ product.name }}</td>
+                            <td>{{ product.description }}</td>
+                            <td>{{ product.price }}</td>
+                            <td><a @@click ="editProduct(product, index)" class="text-primary">Edit</a></td>
+                            <td><a @@click ="deleteProduct(product.id, index)" class="text-danger">Delete</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div v-else>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" v-model="productModel.name" id="name" />
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input class="form-control" v-model="productModel.description" id="description" />
+                </div>
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <input class="form-control" v-model="productModel.price" id="price" />
+                </div>
+                <button @@click ="creatProduct" v-if ="!productModel.id" class="btn btn-success">Create</button>
+                <button @@click ="updateProduct" v-else class="btn btn-primary">Update</button>
+                <button @@click ="cansel" v-if="productModel.id" class="btn btn-secondary">Cancel</button>
+                <button @@click ="cansel" v-if="!productModel.id" class="btn btn-secondary">Cancel</button>
+            </div>
+        </div>
     </div>
 </div>
 
 @section scripts{
-     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="~/js/admin/main.js"></script>
 }
