--- a/ShopApp/Pages/Admin/Index.cshtml
+++ b/ShopApp/Pages/Admin/Index.cshtml
@@ -2,67 +2,50 @@
 @model ShopApp.Pages.Admin.IndexModel
 @{
 }
-<div id="app" class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">Admin Menu</h4>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="#">Products</a></li>
-                    <li class="list-group-item"><a href="#">Stock</a></li>
-                    <li class="list-group-item"><a href="#">Orders</a></li>
-                </ul>
-            </div>
-        </div>
+<div id="app" class="col-md-9">
+    <div v-if="!editing">
+        <button class="btn btn-primary" @@click="newProduct">Add New Product</button>
+        <table class="table mt-4">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr v-for="(product, index) in products">
+                    <td>{{ product.id }}</td>
+                    <td>{{ product.name }}</td>
+                    <td>{{ product.description }}</td>
+                    <td>{{ product.price }}</td>
+                    <td><a @@click ="editProduct(product, index)" class="text-primary">Edit</a></td>
+                    <td><a @@click ="deleteProduct(product.id, index)" class="text-danger">Delete</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-        <div class="col-md-9">
-            <div v-if="!editing">
-                <button class="btn btn-primary" @@click="newProduct">Add New Product</button>
-                <table class="table mt-4">
-                    <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Price</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr v-for="(product, index) in products">
-                            <td>{{ product.id }}</td>
-                            <td>{{ product.name }}</td>
-                            <td>{{ product.description }}</td>
-                            <td>{{ product.price }}</td>
-                            <td><a @@click ="editProduct(product, index)" class="text-primary">Edit</a></td>
-                            <td><a @@click ="deleteProduct(product.id, index)" class="text-danger">Delete</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <div v-else>
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input class="form-control" v-model="productModel.name" id="name" />
-                </div>
-                <div class="form-group">
-                    <label for="description">Description</label>
-                    <input class="form-control" v-model="productModel.description" id="description" />
-                </div>
-                <div class="form-group">
-                    <label for="price">Price</label>
-                    <input class="form-control" v-model="productModel.price" id="price" />
-                </div>
-                <button @@click ="creatProduct" v-if ="!productModel.id" class="btn btn-success">Create</button>
-                <button @@click ="updateProduct" v-else class="btn btn-primary">Update</button>
-                <button @@click ="cansel" v-if="productModel.id" class="btn btn-secondary">Cancel</button>
-                <button @@click ="cansel" v-if="!productModel.id" class="btn btn-secondary">Cancel</button>
-            </div>
+    <div v-else>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input class="form-control" v-model="productModel.name" id="name" />
         </div>
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input class="form-control" v-model="productModel.description" id="description" />
+        </div>
+        <div class="form-group">
+            <label for="price">Price</label>
+            <input class="form-control" v-model="productModel.price" id="price" />
+        </div>
+        <button @@click ="creatProduct" v-if ="!productModel.id" class="btn btn-success">Create</button>
+        <button @@click ="updateProduct" v-else class="btn btn-primary">Update</button>
+        <button @@click ="cansel" v-if="productModel.id" class="btn btn-secondary">Cancel</button>
+        <button @@click ="cansel" v-if="!productModel.id" class="btn btn-secondary">Cancel</button>
     </div>
 </div>
 
