--- a/ShopApp/Pages/Admin/Stock.cshtml
+++ b/ShopApp/Pages/Admin/Stock.cshtml
@@ -2,4 +2,46 @@
 @model ShopApp.Pages.Admin.StockModel
 @{
 }
-<h4 class="col-md-9">Stock</h4>
+
+
+<div id="app" class="col-md-10">
+    <div class="row">
+        <div class="col-md-2 divider-right">
+            <table class="table">
+                <tr v-for="product in products" @@click="selectProduct(product)">
+                    <td>{{ product.description }}</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="col-md-7 divider-right">
+            <table class="table" v-if="selectedProduct">
+                <tr v-for="(stock, index) in selectedProduct.stock">
+                    <td><input class="form-control" v-model="stock.description"/></td>
+                    <td><input class="form-control" v-model="stock.qty"/></td>
+                    <td><a class="btn btn-danger" @@click="deleteStock(stock.id, index)">Delete</a></td>
+                </tr>
+            </table>
+
+            <button class="btn btn-primary" @@click="updateStock">Update Stock</button>
+        </div>
+
+        <div class="col-md-3">
+            <div class="form-group">
+                <label for="newStockDescription">Description</label>
+                <input class="form-control" v-model="newStock.description" id="newStockDescription"/>
+            </div>
+
+            <div class="form-group">
+                <label for="newStockQty">Quantity</label>
+                <input class="form-control" v-model="newStock.qty" id="newStockQty"/>
+            </div>
+
+            <button class="btn btn-primary" @@click="createStock">Create</button>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="~/js/admin/stock.js"></script>
+}
