--- a/ShopApp/Pages/Admin/_AdminLayout.cshtml
+++ b/ShopApp/Pages/Admin/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title">Admin Menu</h4>
@@ -45,7 +45,8 @@
         </div>           
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
