Update stock quantity, create order, get order by reference, stripe payment

--- a/ShopApp/Pages/Cart.cshtml
+++ b/ShopApp/Pages/Cart.cshtml
@@ -23,6 +23,9 @@
                         </div>
                     }
                 </div>
+                <form method="POST">
+                    <button type="submit">Checkout</button>
+                </form>
             </div>
         </div>
     </div>
